--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^6.8.0",
     "next": "14.2.5",
     "numeral": "^2.0.6",
+    "query-string": "^9.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-draggable": "^4.4.6",
@@ -40,6 +41,7 @@
     "@next/eslint-plugin-next": "^14.2.5",
     "@types/lodash": "^4.17.7",
     "@types/node": "20.14.12",
+    "@types/numeral": "^2.0.5",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "eslint": "^8.0.0",
