--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "start": "npm run dev",
     "lint": "next lint ",
     "lint:fix": "next lint  --fix",
-    "test": "jscpd --pattern 'src/**/*.js' -o"
+    "test": "vitest run",
+    "test:e2e": "playwright test ",
+    "percy": "env-cmd -e staging,base percy storybook http://localhost:6006",
+    "storybook": "storybook dev -p 6006",
+    "storybook:build": "storybook build"
   },
   "dependencies": {
     "@emotion/cache": "^11.13.1",
@@ -38,7 +42,15 @@
     "universal-cookie": "^7.2.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.2",
     "@next/eslint-plugin-next": "^14.2.5",
+    "@storybook/addon-essentials": "^8.4.6",
+    "@storybook/addon-interactions": "^8.4.6",
+    "@storybook/addon-onboarding": "^8.4.6",
+    "@storybook/blocks": "^8.4.6",
+    "@storybook/nextjs": "^8.4.6",
+    "@storybook/react": "^8.4.6",
+    "@storybook/test": "^8.4.6",
     "@types/lodash": "^4.17.7",
     "@types/node": "20.14.12",
     "@types/numeral": "^2.0.5",
@@ -49,8 +61,10 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-storybook": "^0.11.1",
     "postcss": "^8",
     "prettier": "^3.3.3",
+    "storybook": "^8.4.6",
     "tailwindcss": "^3.4.8",
     "typescript": "5.5.4"
   }
