--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "universal-cookie": "^7.2.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
     "@chromatic-com/storybook": "^3.2.2",
     "@next/eslint-plugin-next": "^14.2.5",
     "@storybook/addon-essentials": "^8.4.6",
