--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@next/eslint-plugin-next": "^14.2.5",
     "@storybook/addon-essentials": "^8.4.6",
     "@storybook/addon-interactions": "^8.4.6",
+    "@storybook/addon-links": "^8.4.1",
     "@storybook/addon-onboarding": "^8.4.6",
     "@storybook/blocks": "^8.4.6",
     "@storybook/nextjs": "^8.4.6",
