--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash": "^4.17.21",
     "mongodb": "^6.8.0",
     "next": "14.2.5",
+    "next-redux-wrapper": "^8.1.0",
     "numeral": "^2.0.6",
     "query-string": "^9.1.1",
     "react": "18.3.1",
