--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.5",
+    "@portabletext/react": "^3.2.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@sanity/image-url": "^1.1.0",
     "axios": "^1.7.2",
     "dayjs": "^1.11.12",
     "env-cmd": "^10.1.0",
@@ -29,6 +31,7 @@
     "mongodb": "^6.8.0",
     "next": "14.2.5",
     "next-redux-wrapper": "^8.1.0",
+    "next-sanity": "^9.8.25",
     "numeral": "^2.0.6",
     "query-string": "^9.1.1",
     "react": "18.3.1",
