--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "env-cmd -e base,dev next dev",
+    "dev:prod": "env-cmd -e base,prod next dev",
     "build": "env-cmd -e base,prod next build",
-    "serve": "next",
+    "serve": "next start",
     "start": "npm run dev",
     "lint": "next lint ",
     "lint:fix": "next lint  --fix",
