--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.2",
   "private": true,
   "scripts": {
-    "dev": "env-cmd -e base,dev next dev",
+    "dev": "env-cmd -e base,dev  next dev",
     "dev:prod": "env-cmd -e base,prod next dev",
     "build": "env-cmd -e base,prod next build",
     "serve": "next start",
@@ -60,10 +60,11 @@
     "@types/numeral": "^2.0.5",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.2",
-    "eslint": "^9.16.0",
+    "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-storybook": "^0.11.1",
     "postcss": "^8",
