--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@portabletext/react": "^3.2.0",
     "@reduxjs/toolkit": "^2.5.0",
     "@sanity/image-url": "^1.1.0",
+    "@supabase/supabase-js": "^2.47.12",
     "dayjs": "^1.11.13",
     "env-cmd": "^10.1.0",
     "flowbite-react": "^0.10.2",
