--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@sanity/image-url": "^1.1.0",
     "@supabase/supabase-js": "^2.47.12",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "env-cmd": "^10.1.0",
     "flowbite-react": "^0.10.2",
     "graphql": "^16.10.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.474.0",
     "mongodb": "^6.12.0",
     "next": "15.1.0",
     "next-redux-wrapper": "^8.1.0",
@@ -43,6 +46,8 @@
     "react-resizable": "^3.0.5",
     "redux": "^5.0.1",
     "remark-gfm": "^4.0.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "universal-cookie": "^7.2.2"
   },
   "devDependencies": {
