--- a/components.json
+++ b/components.json
@@ -12,10 +12,15 @@
     "prefix": ""
   },
   "aliases": {
-    "utils": "src/libs/shadcn/utils",
-    "components": "src/libs/shadcn/components",
-    "ui": "src/libs/shadcn/ui",
-    "lib": "src/libs/shadcn/lib",
-    "hooks": "src/libs/shadcn/hooks"
+    "components": "zzzzz/adsadas/asaa/aaa",
+    "components/*": "qqq/aaa/components/*",
+    "components/**": "qqq/aaa/components/**",
+    "components/lib": "ggg/libs/components",
+    "components/lib/utils": "ggg/libs/components/utils",
+    "utils": "bbb/aaa/utils",
+    "ui": "ccc/aaa/components/ui",
+    "lib": "ddd/aaa/lib",
+    "lib/utils": "eee/aaa/lib",
+    "hooks": "fff/aaa/hooks"
   }
 }
