--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "env-cmd -e base,dev  next dev",
     "dev:prod": "env-cmd -e base,prod next dev",
     "build": "env-cmd -e base,prod next build",
+    "shadcn": "npx shadcn add alert -o -p test/aaa ",
     "serve": "next start",
     "start": "npm run dev",
     "lint": "next lint ",
@@ -18,37 +19,76 @@
   },
   "dependencies": {
     "@apollo/client": "^3.12.4",
+    "@hookform/resolvers": "^3.10.0",
     "@portabletext/react": "^3.2.0",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.5",
+    "@radix-ui/react-aspect-ratio": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-context-menu": "^2.2.5",
+    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@radix-ui/react-hover-card": "^1.1.5",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-menubar": "^1.1.5",
+    "@radix-ui/react-navigation-menu": "^1.2.4",
+    "@radix-ui/react-popover": "^1.1.5",
+    "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-radio-group": "^1.2.2",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.5",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slider": "^1.2.2",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.5",
+    "@radix-ui/react-toggle": "^1.1.1",
+    "@radix-ui/react-toggle-group": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.7",
     "@reduxjs/toolkit": "^2.5.0",
     "@sanity/image-url": "^1.1.0",
     "@supabase/supabase-js": "^2.47.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "embla-carousel-react": "^8.5.2",
     "env-cmd": "^10.1.0",
     "flowbite-react": "^0.10.2",
     "graphql": "^16.10.0",
+    "input-otp": "^1.4.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
     "mongodb": "^6.12.0",
     "next": "15.1.0",
     "next-redux-wrapper": "^8.1.0",
     "next-sanity": "^9.8.27",
+    "next-themes": "^0.4.4",
     "numeral": "^2.0.6",
     "openai": "^4.77.0",
     "query-string": "^9.1.1",
     "react": "19.0.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0",
     "react-draggable": "^4.4.6",
-    "react-hook-form": "^7.54.1",
+    "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.2.0",
     "react-resizable": "^3.0.5",
+    "react-resizable-panels": "^2.1.7",
+    "recharts": "^2.15.0",
     "redux": "^5.0.1",
     "remark-gfm": "^4.0.0",
+    "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "universal-cookie": "^7.2.2"
+    "universal-cookie": "^7.2.2",
+    "vaul": "^1.1.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
