--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,10 @@
     "jsx": "preserve",
     "incremental": true,
     "baseUrl": "./",
-    // "paths": {
-    //   "@/*": ["./*"]
-    // },
+    "paths": {
+      // "@/*": ["./*"]
+      "@shadcn/*": ["./src/libs/shadcn/*"]
+    },
     "plugins": [
       {
         "name": "next"
