--- a/public/manifest-note.json
+++ b/public/manifest-note.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "Note",
+  "short_name": "note",
   "name": "note",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "/image/note.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
