--- a/public/manifest-note.json
+++ b/public/manifest-note.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "note",
-  "name": "note",
+  "short_name": "Note",
+  "name": "Note",
   "icons": [
     {
       "src": "/image/note.ico",
