--- a/package.json
+++ b/package.json
@@ -18,42 +18,43 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
-    "@apollo/client": "^3.12.4",
-    "@hookform/resolvers": "^3.10.0",
-    "@portabletext/react": "^3.2.0",
-    "@radix-ui/react-accordion": "^1.2.2",
-    "@radix-ui/react-alert-dialog": "^1.1.5",
-    "@radix-ui/react-aspect-ratio": "^1.1.1",
-    "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-collapsible": "^1.1.2",
-    "@radix-ui/react-context-menu": "^2.2.5",
-    "@radix-ui/react-dialog": "^1.1.5",
-    "@radix-ui/react-dropdown-menu": "^2.1.5",
-    "@radix-ui/react-hover-card": "^1.1.5",
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-menubar": "^1.1.5",
-    "@radix-ui/react-navigation-menu": "^1.2.4",
-    "@radix-ui/react-popover": "^1.1.5",
-    "@radix-ui/react-progress": "^1.1.1",
-    "@radix-ui/react-radio-group": "^1.2.2",
-    "@radix-ui/react-scroll-area": "^1.2.2",
-    "@radix-ui/react-select": "^2.1.5",
-    "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slider": "^1.2.2",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-switch": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.1.2",
-    "@radix-ui/react-toast": "^1.2.5",
-    "@radix-ui/react-toggle": "^1.1.1",
-    "@radix-ui/react-toggle-group": "^1.1.1",
-    "@radix-ui/react-tooltip": "^1.1.7",
-    "@reduxjs/toolkit": "^2.5.0",
+    "@apollo/client": "^3.13.5",
+    "@hookform/resolvers": "^4.1.3",
+    "@portabletext/react": "^3.2.1",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-aspect-ratio": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-context-menu": "^2.2.6",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-hover-card": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-menubar": "^1.1.6",
+    "@radix-ui/react-navigation-menu": "^1.2.5",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slider": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-toggle": "^1.1.2",
+    "@radix-ui/react-toggle-group": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
+    "@reduxjs/toolkit": "^2.6.1",
     "@sanity/image-url": "^1.1.0",
-    "@supabase/supabase-js": "^2.47.12",
+    "@supabase/supabase-js": "^2.49.1",
+    "@tailwindcss/postcss": "^4.0.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.5.2",
@@ -62,63 +63,63 @@
     "graphql": "^16.10.0",
     "input-otp": "^1.4.2",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.474.0",
-    "mongodb": "^6.12.0",
-    "next": "15.1.0",
+    "lucide-react": "^0.483.0",
+    "mongodb": "^6.15.0",
+    "next": "15.2.3",
     "next-redux-wrapper": "^8.1.0",
-    "next-sanity": "^9.8.27",
-    "next-themes": "^0.4.4",
+    "next-sanity": "^9.9.5",
+    "next-themes": "^0.4.6",
     "numeral": "^2.0.6",
-    "openai": "^4.77.0",
+    "openai": "^4.89.0",
     "query-string": "^9.1.1",
     "react": "19.0.0",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.6.3",
     "react-dom": "19.0.0",
     "react-draggable": "^4.4.6",
     "react-hook-form": "^7.54.2",
-    "react-markdown": "^9.0.1",
+    "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-resizable": "^3.0.5",
     "react-resizable-panels": "^2.1.7",
-    "recharts": "^2.15.0",
+    "recharts": "^2.15.1",
     "redux": "^5.0.1",
-    "remark-gfm": "^4.0.0",
-    "sonner": "^1.7.2",
-    "tailwind-merge": "^2.6.0",
+    "remark-gfm": "^4.0.1",
+    "sonner": "^2.0.1",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "universal-cookie": "^7.2.2",
+    "universal-cookie": "^8.0.1",
     "vaul": "^1.1.2",
-    "zod": "^3.24.1"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.2",
-    "@next/eslint-plugin-next": "^15.1.0",
-    "@percy/cli": "^1.30.4",
+    "@chromatic-com/storybook": "^3.2.6",
+    "@next/eslint-plugin-next": "^15.2.3",
+    "@percy/cli": "^1.30.7",
     "@percy/storybook": "^6.0.3",
-    "@storybook/addon-essentials": "^8.4.7",
-    "@storybook/addon-interactions": "^8.4.7",
-    "@storybook/addon-links": "^8.4.7",
-    "@storybook/addon-onboarding": "^8.4.7",
-    "@storybook/blocks": "^8.4.7",
-    "@storybook/nextjs": "^8.4.7",
-    "@storybook/react": "^8.4.7",
-    "@storybook/test": "^8.4.7",
-    "@types/lodash": "^4.17.13",
-    "@types/node": "22.10.2",
+    "@storybook/addon-essentials": "^8.6.7",
+    "@storybook/addon-interactions": "^8.6.7",
+    "@storybook/addon-links": "^8.6.7",
+    "@storybook/addon-onboarding": "^8.6.7",
+    "@storybook/blocks": "^8.6.7",
+    "@storybook/nextjs": "^8.6.7",
+    "@storybook/react": "^8.6.7",
+    "@storybook/test": "^8.6.7",
+    "@types/lodash": "^4.17.16",
+    "@types/node": "22.13.11",
     "@types/numeral": "^2.0.5",
-    "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.2",
-    "eslint": "^9.17.0",
-    "eslint-config-next": "^15.1.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.37.3",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-storybook": "^0.11.1",
+    "@types/react": "19.0.12",
+    "@types/react-dom": "19.0.4",
+    "eslint": "^9.23.0",
+    "eslint-config-next": "^15.2.3",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-storybook": "^0.11.6",
     "postcss": "^8",
-    "prettier": "^3.4.2",
-    "storybook": "^8.4.7",
+    "prettier": "^3.5.3",
+    "storybook": "^8.6.7",
     "tailwindcss": "^3.4.16",
-    "typescript": "5.7.2"
+    "typescript": "5.8.2"
   }
 }
